--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -1,7 +1,13 @@
 .post {
     background-color: rgba(0, 0, 0, 0.9);
-    padding: 2rem;
-    max-width: max(300px, 50vw);
-    color: black;
-    background-color: rgba(255, 255, 255, 0.493);
+    padding: 1rem 1.5rem;
+    // box-sizing: border-box;
+    min-width: 300px;
+    max-width: 60%;
+    color: white;
+    background-color: rgba(59, 59, 59, 0.75);
+}
+
+iframe {
+    width: 100%;
 }
