--- a/src/sass/posts.scss
+++ b/src/sass/posts.scss
@@ -1,12 +1,13 @@
 .card {
-    max-width: max(30vw, 300px);
-    // height: 150px;
+    max-width: 500px;
+    min-width: 300px;
+    height: 100px;
 
     background-color: rgba(59, 59, 59, 0.75);
 
     border-radius: 10px;
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 100px 1fr;
 
     overflow: hidden;
 }
@@ -26,19 +27,22 @@
 
 .card-body {
     font-weight: normal;
+    // font-size: 13px;
+    // margin: 5px 0;
     padding: 1rem;
+    
+    overflow-y: scroll;
 
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-
-    h2 {
-        margin: 0;
-    }
 }
 
-@media screen and (max-width: 1200px) {
-    .card {
-        font-size: 0.8rem;
-    }
+.card-date {
+    font-size: 0.75rem;
+}
+
+.card-title {
+    font-size: 1rem;
+    font-weight: bold;
 }
